final-prep/bmuschko/16-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task16
  namespace: default
  annotations: 
    kubernetes.io/ingress.class:  nginx # without this we don't get ip. it's VVI.
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 3000
