final-prep/bmuschko/16-ingress/task16.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task16
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "hello-world.exposed"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 3000
